Fix paths with leading slashes

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <!-- ===========================
          STYLESHEETS
     ============================ -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
         <!-- Logo (clickable, links to home) -->
         <div class="site-title">
             <a href="index.html">
-                <img src="IMAGES/logo.png" alt="Selfary logo" class="site-logo">
+                <img src="/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
             </a>
         </div>
 
