--- a/date-posted-search-page.html
+++ b/date-posted-search-page.html
@@ -16,7 +16,7 @@
     <!-- ===========================
          STYLESHEETS
     ============================ -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
         <!-- Logo (clickable, links to home) -->
         <div class="site-title">
             <a href="index.html">
-                <img src="IMAGES/logo.png" alt="Selfary logo" class="site-logo">
+                <img src="/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
             </a>
         </div>
 
@@ -94,7 +94,7 @@
 
         <!-- Article Photo -->
         <figure class="home">
-            <img src="IMAGES/home.png" alt="Home">
+            <img src="/IMAGES/home.png" alt="Home">
         </figure>
 
         <!-- Article Text -->
@@ -145,6 +145,6 @@
      SCRIPTS
 ============================ -->
 
-<script type="module" src="JS/main.js"></script>
-<script type="module" src="JS/date-posted.js"></script>
+<script type="module" src="/JS/main.js"></script>
+<script type="module" src="/JS/date-posted.js"></script>
 
