--- a/industry-search-page.html
+++ b/industry-search-page.html
@@ -30,7 +30,7 @@
         <!-- Logo (clickable, links to home) -->
         <div class="site-title">
             <a href="index.html">
-                <img src="IMAGES/logo.png" alt="Selfary logo" class="site-logo">
+                <img src="/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
             </a>
         </div>
 
@@ -94,7 +94,7 @@
 
         <!-- Article Photo -->
         <figure class="home">
-            <img src="IMAGES/home.png" alt="Home">
+            <img src="/IMAGES/home.png" alt="Home">
         </figure>
 
         <!-- Article Text -->
@@ -150,5 +150,5 @@
      SCRIPTS
 ============================ -->
 
-<script type="module" src="JS/main.js"></script>
-<script type="module" src="JS/industries.js"></script>
+<script type="module" src="/JS/main.js"></script>
+<script type="module" src="/JS/industries.js"></script>
