--- a/hiring-ethics-articles.html
+++ b/hiring-ethics-articles.html
@@ -16,7 +16,7 @@
     <!-- ===========================
          STYLESHEETS
     ============================ -->
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/frontend/CSS/style.css">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
         <!-- Logo (clickable, links to home) -->
         <div class="site-title">
             <a href="index.html">
-                <img src="/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
+                <img src="/frontend/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
             </a>
         </div>
 
@@ -99,7 +99,7 @@
         <figure class="home">
 			<a href="Does Belief Require Choice.html">
 				<h2 class="home-heading">Does Belief Require Choice?</h2>
-            	<img src="/IMAGES/does_belief_require_choice_photo.png" alt="Does Belief Require Choice?">
+            	<img src="/frontend/IMAGES/does_belief_require_choice_photo.png" alt="Does Belief Require Choice?">
 			</a>
         </figure>
 
@@ -107,7 +107,7 @@
         <figure class="home">
 			<a href="Does Experience Mean Nothing or Something.html">
 				<h2 class="home-heading">Does Experience Mean Nothing or Something?</h2>
-            	<img src="/IMAGES/does_experience_mean_nothing_or_something_photo.jpg" alt="Does Experience Mean Nothing or Something?">
+            	<img src="/frontend/IMAGES/does_experience_mean_nothing_or_something_photo.jpg" alt="Does Experience Mean Nothing or Something?">
 			</a>
         </figure>
 
@@ -115,7 +115,7 @@
         <figure class="home">
 			<a href="Is AI Mimicking Communication or Genuinely Thinking.html">
 				<h2 class="home-heading">Is AI Mimicking Communication or Genuinely Thinking?</h2>
-                <img src="/IMAGES/Is_AI_mimicking_communication_or_genuinely_thinking_photo.png" alt="Is AI Mimicking Communication or Genuinely Thinking?">
+                <img src="/frontend/IMAGES/Is_AI_mimicking_communication_or_genuinely_thinking_photo.png" alt="Is AI Mimicking Communication or Genuinely Thinking?">
             </a>
         </figure>
 
@@ -123,7 +123,7 @@
         <figure class="home">
 			<a href="Why Do Most Job Boards Not Work.html">
 				<h2 class="home-heading">Why Do Most Job Boards Not Work?</h2>
-            	<img src="/IMAGES/home.png" alt="Why Do Most Job Boards Not Work?">
+            	<img src="/frontend/IMAGES/home.png" alt="Why Do Most Job Boards Not Work?">
 			</a>
         </figure>
 
