--- a/Does Experience Mean Nothing or Something.html
+++ b/Does Experience Mean Nothing or Something.html
@@ -16,7 +16,7 @@
     <!-- ===========================
          STYLESHEETS
     ============================ -->
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/frontend/CSS/style.css">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
         <!-- Logo (clickable, links to home) -->
         <div class="site-title">
             <a href="index.html">
-                <img src="/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
+                <img src="/frontend/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
             </a>
         </div>
 
@@ -94,7 +94,7 @@
 
         <!-- Article Photo -->
         <figure class="home">
-            <img src="/IMAGES/does_experience_mean_nothing_or_something_photo.jpg" alt="Does Experience Mean Nothing or Something?">
+            <img src="/frontend/IMAGES/does_experience_mean_nothing_or_something_photo.jpg" alt="Does Experience Mean Nothing or Something?">
         </figure>
 
         <!-- Article Text -->
