--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <!-- ===========================
          STYLESHEETS
     ============================ -->
-    <link rel="stylesheet" href="/frontend/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
         <!-- Logo (clickable, links to home) -->
         <div class="site-title">
             <a href="index.html">
-                <img src="/frontend/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
+                <img src="/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
             </a>
         </div>
 
@@ -94,7 +94,7 @@
 
         <!-- About Photo -->
         <figure class="about-photo">
-            <img src="/frontend/IMAGES/about_photo.jpg" alt="About page photo">
+            <img src="/IMAGES/about_photo.jpg" alt="About page photo">
         </figure>
 
         <!-- About Text -->
