--- a/Is AI Mimicking Communication or Genuinely Thinking.html
+++ b/Is AI Mimicking Communication or Genuinely Thinking.html
@@ -30,7 +30,7 @@
         <!-- Logo (clickable, links to home) -->
         <div class="site-title">
             <a href="index.html">
-                <img src="/frontend/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
+                <img src="/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
             </a>
         </div>
 
@@ -94,7 +94,7 @@
 
         <!-- Article Photo -->
         <figure class="home">
-            <img src="/frontend/IMAGES/Is_AI_mimicking_communication_or_genuinely_thinking_photo.png" alt="Is AI Mimicking Communication or Genuinely Thinking?">
+            <img src="/IMAGES/Is_AI_mimicking_communication_or_genuinely_thinking_photo.png" alt="Is AI Mimicking Communication or Genuinely Thinking?">
         </figure>
 
         <!-- Article Text -->
