--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         <p>Selfary is Organized By:</p>
 
         <ol>
-            <li>Project Based Services for Business Administration and HRIS needs.</li>
-            <li>Job and Career Board Categorized by Industry, Region, and Date Job is Posted.</li>
+            <li>Job and Career Board Categorized by Industry, Region, and Date Job is Posted. IN THE PROCESS OF CREATION THROUGHOUT 2026.</li>
             <li>Hiring Ethics Articles Based on Experience and Belief.</li>
+            <li>Project Based Services for Business Administration and HRIS needs.</li>
         </ol>
 
     </div>
