Updating Filter Names

--- a/region-search-page.html
+++ b/region-search-page.html
@@ -108,11 +108,11 @@
         <div class="filter-container">
 
             <select id="stateSelect">
-                <option value="">Select State/Other</option>
+                <option value="">Select State/Territory</option>
             </select>
 
             <select id="citySelect" disabled>
-                <option value="">Select City/Other</option>
+                <option value="">Select City/Town/Other</option>
             </select>
 
             <select id="scaleSelect" disabled>
