Final Filter Name Changes

--- a/date-posted-search-page.html
+++ b/date-posted-search-page.html
@@ -109,17 +109,17 @@
 
             <!-- Date Posted -->
             <select id="datepostedSelect">
-                <option value="">Select Date Posted</option>
+                <option value="">Date Posted</option>
             </select>
 
             <!-- Scale -->
             <select id="scaleSelect" disabled>
-                <option value="">Select Scale</option>
+                <option value="">Scale</option>
             </select>
 
             <!-- Type -->
             <select id="typeSelect" disabled>
-                <option value="">Select Type</option>
+                <option value="">Type</option>
             </select>
 
         </div>
