--- a/industry-search-page.html
+++ b/industry-search-page.html
@@ -109,22 +109,22 @@
 
             <!-- Industry -->
             <select id="industrySelect">
-                <option value="">Select Industry</option>
+                <option value="">Industry</option>
             </select>
 
             <!-- Subindustry -->
             <select id="subindustrySelect" disabled>
-                <option value="">Select Subindustry</option>
+                <option value="">Subindustry</option>
             </select>
 
             <!-- Scale -->
             <select id="scaleSelect" disabled>
-                <option value="">Select Scale</option>
+                <option value="">Scale</option>
             </select>
 
             <!-- Type -->
             <select id="typeSelect" disabled>
-                <option value="">Select Type</option>
+                <option value="">Type</option>
             </select>
 
         </div>
