--- a/region-search-page.html
+++ b/region-search-page.html
@@ -108,19 +108,19 @@
         <div class="filter-container">
 
             <select id="stateSelect">
-                <option value="">Select State/Territory</option>
+                <option value="">State/Territory</option>
             </select>
 
             <select id="citySelect" disabled>
-                <option value="">Select City/Town/Other</option>
+                <option value="">City/Town/Other</option>
             </select>
 
             <select id="scaleSelect" disabled>
-                <option value="">Select Scale</option>
+                <option value="">Scale</option>
             </select>
 
             <select id="typeSelect" disabled>
-                <option value="">Select Type</option>
+                <option value="">Type</option>
             </select>
 
         </div>
