Updated to Filter Output

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
 
         <p>You can also view my podcast on <a href="https://www.youtube.com/@selfary">YouTube</a> about interpretation of hiring processes. </p>
         
-        <p>Email: <a href="mailto:mebeingtempest@yahoo.com">Contact Tempest</a>  - Responses sent through email will be answered within 1-2 business days and I pretty much will only respond to those who are genuinely interested in my project support (it does depend on the request, if you are human and all). </p>
+        <p>Email: <a href="mailto:mebeingtempest@yahoo.com">Contact Tempest</a>  - Responses will be answered within 2-3 business days and for project work, please expect to chat on the phone about the details and payment of your adminsitration or HRIS project before we get started. </p>
 
         <p>Note: Selfary and I are not responsible for inaccuracies within this website. This website is coded by me (and help from Co-pilot), but I am still a newbie. I believe I have done a lovely job thus far, but I say this mainly for people who may have mixed feelings about spending time on a website based on looks not being perfect because of the association of imperfect websites being typically not trusted. Maybe I only speak for myself. Regardless, I assure you, I am legit. </p>
 
