--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,7 @@
 		<h2 class="home-heading">****************************</h2>
 
         <p>Email: <a href="mailto:mebeingtempest@yahoo.com">Contact Tempest</a></p>
+        <p>Please expect to chat on the phone about the details and payment of your adminsitration or HRIS project before we get started.</p>
 
     </div>
 </main>
