--- a/industry-search-page.html
+++ b/industry-search-page.html
@@ -102,7 +102,7 @@
         
         <p>These filters help you quickly browse employers by industry and job title, giving you a clear starting point.</p>
 
-        <p>Changes are made regularly. Use the filters below to narrow your search:</p>
+        <p>Changes are made regularly. Contact business links are included on the Regions page only, the page you are currently on is the Indsutry search page. Direct career page links are what is provided if the business has filtering options by industry. Use the filters below to narrow your search:</p>
 
         <!-- FILTERS -->
         <div class="filter-container">
