--- a/region-search-page.html
+++ b/region-search-page.html
@@ -102,7 +102,7 @@
         
         <p>These filters can help you quickly browse employers by location and job category, giving you a clear starting point whether you're looking for permanent work, seasonal opportunities, government positions, etc.</p>
 
-        <p>Changes are made to this page on a regular basis. Use the filters below to narrow your search:</p>
+        <p>Changes are made to this page on a regular basis. Contact business links are included on the Regions page only, otherwise direct career page links are what is provided. This Regions search page is the most comprehensive list of business links - not all businesses have filtering options for Date Posted or Industry, and some do not have a careers page at all. Use the filters below to narrow your search:</p>
 
         <!-- FILTERS -->
         <div class="filter-container">
