--- a/date-posted-search-page.html
+++ b/date-posted-search-page.html
@@ -102,7 +102,7 @@
         
         <p>These filters help you quickly browse employers who have posted jobs recently, giving you a clear starting point.</p>
 
-        <p>Changes are made regularly. Use the filters below to narrow your search:</p>
+        <p>Changes are made regularly. Contact business links are included on the Regions page only, the page you are currently on is the Date Posted search page. Direct career page links are what is provided if the business has filtering options by time posted. Use the filters below to narrow your search:</p>
 
         <!-- FILTERS -->
         <div class="filter-container">
