About Page Updated

--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
 
         <p>My purpose with Selfary is to lead people to work towards shifting our online hiring practices from carelessness to care. With that in mind, I created this business as a non-profit because of the unethical aspects of non-profits themselves too. To read articles that are about experiences and ethics regarding hiring practices, including business expenditures, feel free to view the Hiring Ethics articles.</p>
 
-        <p>You can also view my podcast on <a href="https://www.youtube.com/@selfary">YouTube</a> about interpretation of hiring processes. </p>
+        <p>You can also see more about me on <a href="https://www.instagram.com/mebeingtempest">Instagram</a>. </p>
         
         <p>Email: <a href="mailto:mebeingtempest@yahoo.com">Contact Tempest</a>  - Responses will be answered within 2-3 business days and for project work, please expect to chat on the phone about the details and payment of your adminsitration or HRIS project before we get started. </p>
 
