--- a/Is AI Mimicking Communication or Genuinely Thinking.html
+++ b/Is AI Mimicking Communication or Genuinely Thinking.html
@@ -16,7 +16,7 @@
     <!-- ===========================
          STYLESHEETS
     ============================ -->
-    <link rel="stylesheet" href="/frontend/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 
 </head>
 <body>
