--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
             <!-- Main Menu -->
             <ul class="nav-menu">
-                <!-- Home removed -->
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
 
                 <!-- Submenu -->
@@ -73,7 +73,6 @@
                 </li>
 
                 <li><a href="hiring-ethics-articles.html">Hiring Ethics Articles</a></li>
-                <li><a href="contact.html">Contact</a></li>
 
             </ul>
 
@@ -111,9 +110,11 @@
 
         <p>You can also see more about me on <a href="https://www.instagram.com/mebeingtempest">Instagram</a>. </p>
         
-        <p>Email: <a href="mailto:mebeingtempest@yahoo.com">Contact Tempest</a>  - Responses will be answered within 2-3 business days and for project work, please expect to chat on the phone about the details and payment of your adminsitration or HRIS project before we get started. </p>
+        <p>Email: <a href="mailto:mebeingtempest@yahoo.com">Contact Tempest</a>  - An actual response from me (Tempest) will be given on a case-by-case basis but typically they are within 2-3 business days. </p>
 
-        <p>Note: Selfary and I are not responsible for inaccuracies within this website. This website is coded by me (and help from Co-pilot), but I am still a newbie. I believe I have done a lovely job thus far, but I say this mainly for people who may have mixed feelings about spending time on a website based on looks not being perfect because of the association of imperfect websites being typically not trusted. Maybe I only speak for myself. Regardless, I assure you, I am legit. </p>
+        <p>Note: All parties associated with Selfary are not responsible for inaccuracies within this website. This website is coded by me (and help from Co-pilot), but it is a simple layout for many reasons. </p>
+
+        <p>For Donations click <a href="https://donate.stripe.com/00w9AVb4vcmk1DK7ci6kg00">HERE</a>. They are the only source of reveune for Selfary at this time. </p>
 
         <p>– Tempest –</p>
 
