--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <!-- Main Menu -->
             <ul class="nav-menu">
-                <!-- Home removed -->
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
 
                 <!-- Submenu -->
@@ -73,7 +73,6 @@
                 </li>
 
                 <li><a href="hiring-ethics-articles.html">Hiring Ethics Articles</a></li>
-                <li><a href="contact.html">Contact</a></li>
 
             </ul>
 
@@ -101,9 +100,9 @@
         <p>Selfary is Organized By:</p>
 
         <ol>
-            <li>Job and Career Board Categorized by Industry, Region, and Date Job is Posted. IN THE PROCESS OF CREATION THROUGHOUT 2026.</li>
+            <li>About Page: Social Link, Donation link, Contact Email, and reasons why Selfary exists.</li>
+            <li>Employer Search Categorized by Industry, Region, and Date Job is Posted. IN THE PROCESS OF CREATION THROUGHOUT 2026 & 2027.</li>
             <li>Hiring Ethics Articles Based on Experience and Belief.</li>
-            <li>Project Based Services for Business Administration and HRIS needs.</li>
         </ol>
 
     </div>
