--- a/Is AI Mimicking Communication or Genuinely Thinking.html
+++ b/Is AI Mimicking Communication or Genuinely Thinking.html
@@ -47,7 +47,7 @@
 
             <!-- Main Menu -->
             <ul class="nav-menu">
-                <!-- Home removed -->
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
 
                 <!-- Submenu -->
@@ -73,7 +73,6 @@
                 </li>
 
                 <li><a href="hiring-ethics-articles.html">Hiring Ethics Articles</a></li>
-                <li><a href="contact.html">Contact</a></li>
 
             </ul>
 
