--- a/hiring-ethics-articles.html
+++ b/hiring-ethics-articles.html
@@ -94,6 +94,15 @@
 		<h2 class="home-heading">****************************</h2>
 
         <!-- Article Photos & Links -->
+
+        <!-- Timing & Our Online System -->
+        <figure class="home">
+			<a href="Timing & Our Online System.html">
+				<h2 class="home-heading">Timing & Our Online System</h2>
+            	<img src="/IMAGES/Timing & Our Online System.jpg" alt="Timing & Our Online System">
+			</a>
+        </figure>
+
 		<!-- Does Belief Require Choice? -->
         <figure class="home">
 			<a href="Does Belief Require Choice.html">
