--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <ol>
             <li>About Page: Social Link, Donation link, Contact Email, and reasons why Selfary exists.</li>
             <li>Employer Search Categorized by Industry, Region, and Date Job is Posted. IN THE PROCESS OF CREATION THROUGHOUT 2026 & 2027.</li>
-            <li>Hiring Ethics Articles Based on Experience and Belief.</li>
+            <li>Hiring Ethics Articles Based on Belief and Experience.</li>
         </ol>
 
     </div>
