--- a/Timing & Our Online System.html
+++ b/Timing & Our Online System.html
@@ -110,7 +110,7 @@
         
         <p>Word of advice, do not risk uprooting your life in efforts to care about loved ones safety without preparing for it. If you believe you cannot prepare for it, then seek out help from family first so you can plan things out. You do not want to be in a situation I was in where the people you are trying to help would leave you stranded if things go south and the system doesn't accommodate what you need because of your specific circumstance. This is one of many things that stood out - the unemployment system literally would NOT work until I was in a safe spot, then the timing worked all of a sudden when my environment was changed. More details may be shared in the future for clarity, but it is still something I am working through. There is a major difference in understanding why my actions led to a bad sitation and understanding it too late, compared to asking for help from people and they are careless because they don't or haven't related. </p>
         
-        <p>Maybe that is another thing for me to take away for this. If people don't related to your experience, they won't care to help. I believe different in that regard but this is how many people navigate their lives nowadays. If it feels like you may not be in a safe situation in the future given what is currently happening, make your safety the priority, not others.</p>
+        <p>Maybe that is another thing for me to take away for this. If people don't relate to your experience, they won't care to help. I believe different in that regard but this is how many people navigate their lives nowadays. If it feels like you may not be in a safe situation in the future given what is currently happening, make your safety the priority, not others.</p>
 
     </div>
 </main>
