--- a/All Possibilities or No Possibilities.html
+++ b/All Possibilities or No Possibilities.html
@@ -11,7 +11,7 @@
     <!-- ===========================
          PAGE TITLE
     ============================ -->
-    <title>Unethical Hiring Experiences</title>
+    <title>All Possibilities or No Possibilities?</title>
 
     <!-- ===========================
          STYLESHEETS
@@ -90,7 +90,7 @@
     <div class="content">
 
         <!-- Page Heading --> 
-        <h2 class="about-heading">Unethical Hiring Experiences</h2>
+        <h2 class="about-heading">All Possibilities or No Possibilities?</h2>
 
         <!-- Article Photo -->
         <figure class="home">
