--- a/hiring-ethics-articles.html
+++ b/hiring-ethics-articles.html
@@ -97,9 +97,9 @@
 
         <!-- Timing & Our Online System -->
         <figure class="home">
-			<a href="Timing & Our Online System.html">
-				<h2 class="home-heading">Timing & Our Online System</h2>
-            	<img src="/IMAGES/Timing & Our Online System.jpg" alt="Timing & Our Online System">
+			<a href="All Possibilities or No Possibilities.html">
+				<h2 class="home-heading">All Possibilities or No Possibilities?</h2>
+            	<img src="/IMAGES/All Possibilities or No Possibilities.jpg" alt="All Possibilities or No Possibilities?">
 			</a>
         </figure>
 
