--- a/employer-search.html
+++ b/employer-search.html
@@ -11,7 +11,7 @@
     <!-- ===========================
          PAGE TITLE
     ============================ -->
-    <title>Job / Career Board</title>
+    <title>Employer Search By Region</title>
 
     <!-- ===========================
          STYLESHEETS
@@ -49,29 +49,7 @@
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-
-                <!-- Submenu -->
-                <li class="has-submenu">
-
-                    <!-- Parent label (no longer a link) -->
-                    <span class="submenu-label">Employer Search</span>
-
-                    <!-- Arrow toggle button -->
-                    <button class="submenu-toggle" aria-label="Toggle submenu">
-                        <svg width="12" height="12" viewBox="0 0 12 12">
-                            <path d="M1.5 4L6 8l4.5-4"></path>
-                        </svg>
-                    </button>
-
-                    <!-- Dropdown submenu -->
-                    <ul class="submenu">
-						<li><a href="region-search-page.html">Region Search Page</a></li>
-                        <li><a href="industry-search-page.html">Industry Search Page</a></li>
-                        <li><a href="date-posted-search-page.html">Date Posted Search Page</a></li>
-                    </ul>
-
-                </li>
-
+                <li><a href="employer-search.html">Employer Search</a></li>
                 <li><a href="hiring-ethics-articles.html">Hiring Ethics Articles</a></li>
 
             </ul>
@@ -89,7 +67,7 @@
     <div class="content">
 
         <!-- Page Heading --> 
-        <h2 class="about-heading">Job / Career Board</h2>
+        <h2 class="about-heading">Employer Search By Region</h2>
 
         <!-- Article Photo -->
         <figure class="home">
@@ -97,13 +75,37 @@
         </figure>
 
         <!-- Article Text -->
-		<p>This job / career board is different in a few ways.</p>
+        <p>Welcome to Selfary - An Employer Search Database — a simple, organized way to explore business and government options across the United States.</p>
+        
+        <p>These filters can help you quickly browse employers by location, business and government scale, and type of employment, i.e., permanent or temporary employers. The purpose is to provide a comprehensive list of employers for job searches, general data research, or having a clear point of view with how our online hiring world is structured. </p>
+            
+        <p>A large reason for this employer search is to lessen the likelihood of spam, ads, and scammers that people go through during their hiring endeavors - to be able to strive towards our purposeful goals with ease. While Selfary does not have control over what is happening behind closed doors with our businesses and governments, Selfary can provide information to be readily available for all of us to improve the online "system" we live in through creating caring and geninue experiences instead of disconnected and careless ones.</p>
 
-		<ol>
-			<li>Categorizing is based on each page by Industry, Region, and Date Job/Career is posted.</li>
-			<li>Linking to the business website specific to each category. </li>
-			<li>Does not include posts longer than 30 days old. </li>
-		</ol>
+        <p>Changes are made to this page on a regular basis. Contact business links are included along with direct career page links if available. Use the filters below to narrow your search:</p>
+
+        <!-- FILTERS -->
+        <div class="filter-container">
+
+            <select id="stateSelect">
+                <option value="">State/Territory</option>
+            </select>
+
+            <select id="citySelect" disabled>
+                <option value="">City/Town/Other</option>
+            </select>
+
+            <select id="scaleSelect" disabled>
+                <option value="">Scale</option>
+            </select>
+
+            <select id="typeSelect" disabled>
+                <option value="">Type</option>
+            </select>
+
+        </div>
+
+        <!-- RESULTS -->
+        <div id="results"></div>
 
     </div>
 </main>
@@ -114,11 +116,7 @@
 ============================ -->
 <footer class="site-footer">
     <div class="footer-inner">
-
-        <p class="footer-copy">
-            © 2025 Selfary. All rights reserved.
-        </p>
-
+        <p class="footer-copy">© 2025 Selfary. All rights reserved.</p>
     </div>
 </footer>
 
@@ -126,30 +124,7 @@
 <!-- ===========================
      SCRIPTS
 ============================ -->
-<script>
-document.addEventListener("DOMContentLoaded", function () {
 
-    // Mobile menu toggle
-    const navToggle = document.querySelector(".nav-toggle");
-    const navMenu = document.querySelector(".nav-menu");
+<script type="module" src="/JS/main.js"></script>
+<script type="module" src="/JS/regions.js"></script>
 
-    navToggle.addEventListener("click", () => {
-        navMenu.classList.toggle("open");
-    });
-
-    // Submenu toggles
-    const submenuToggles = document.querySelectorAll(".submenu-toggle");
-
-    submenuToggles.forEach(toggle => {
-        toggle.addEventListener("click", (e) => {
-            e.preventDefault();
-            const submenu = toggle.nextElementSibling;
-            submenu.classList.toggle("open");
-        });
-    });
-
-});
-</script>
-
-</body>
-</html>
