--- a/index.html
+++ b/index.html
@@ -49,32 +49,8 @@
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-
-                <!-- Submenu -->
-                <li class="has-submenu">
-
-                    <!-- Parent label (no longer a link) -->
-                    <span class="submenu-label">Employer Search</span>
-
-                    <!-- Arrow toggle button -->
-                    <button class="submenu-toggle" aria-label="Toggle submenu">
-                        <svg width="12" height="12" viewBox="0 0 12 12">
-                            <path d="M1.5 4L6 8l4.5-4"></path>
-                        </svg>
-                    </button>
-
-                    <!-- Dropdown submenu -->
-                    <ul class="submenu">
-                        <li><a href="region-search-page.html">Region Search Page</a></li>
-                        <li><a href="industry-search-page.html">Industry Search Page</a></li>
-                        <li><a href="date-posted-search-page.html">Date Posted Search Page</a></li>
-                    </ul>
-
-                </li>
-
+                <li><a href="employer-search.html">Employer Search</a></li>
                 <li><a href="hiring-ethics-articles.html">Hiring Ethics Articles</a></li>
-
-            </ul>
 
         </nav>
 
