Home Page Change

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="content">
 
         <!-- Page Heading --> 
-        <h2 class="about-heading">If We Care About Purpose For All, Co-Creation & Co-Existence is a Necessity</h2>
+        <h2 class="about-heading">If We Care About Purpose For All, Co-Creation & Co-Existence is Probable</h2>
 
         <!-- Home Photo -->
         <figure class="home">
