--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <p>Selfary is Organized By:</p>
 
         <ol>
-            <li>About Page: Social Link, Donation link, Contact Email, and reasons why Selfary exists.</li>
-            <li>Employer Search Categorized by Industry, Region, and Date Job is Posted. IN THE PROCESS OF CREATION THROUGHOUT 2026 & 2027.</li>
-            <li>Hiring Ethics Articles Based on Belief and Experience.</li>
+            <li>About Page: Social link, donation link, contact email, and reasons why Selfary exists.</li>
+            <li>Employer Search categorized by region or contact, scale of employer, and type of employer. IN THE PROCESS OF CREATION THROUGHOUT 2026.</li>
+            <li>Hiring ethics articles based on belief and experience.</li>
         </ol>
 
     </div>
