Employer Page Updates

--- a/employer-search.html
+++ b/employer-search.html
@@ -75,8 +75,13 @@
         </figure>
 
         <!-- Article Text -->
-        <p>Changes are made to this page on a regular basis. Contact business links are included along with direct career page links if available. Use the filters below to narrow your search:</p>
+                <ol>
+                    Two Tips: 
+                    <li>Create a professional/employer specific email because they all have automated and coding processes for marketing purposes through their application processes. This is helpful for creation of accounts with applying to jobs and interviewing/job communication.</li>
+                    <li>If you have come to this website before and have not seen recent changes in sometime, clearing out your cache in your browser or searching in incognito mode should help with making sure you are seeing the most up to date changes on Selfary.</li>
+                </ol>
 
+                <p>Changes are made to this page on a regular basis. Contact business links are included along with direct career page links if available. Use the filters below to narrow your search:</p>
         <!-- FILTERS -->
         <div class="filter-container">
 
