--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <!-- ===========================
-         META / PAGE SETTINGS
+         META & PAGE SETTINGS
     ============================ -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,12 +11,12 @@
     <!-- ===========================
          PAGE TITLE
     ============================ -->
-    <title>Home</title>
+    <title>Adult Items</title>
 
     <!-- ===========================
          STYLESHEETS
     ============================ -->
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body>
@@ -30,9 +30,15 @@
         <!-- Logo (clickable, links to home) -->
         <div class="site-title">
             <a href="index.html">
-                <img src="/IMAGES/logo.png" alt="Selfary logo" class="site-logo">
+                <img src="/images/logo.png" alt="Selfary Expression logo" class="site-logo">
             </a>
         </div>
+
+        <!-- Floating Cart Icon -->
+        <a href="cart.html" class="floating-cart">
+            🛒
+            <span class="cart-badge" id="cart-count">0</span>
+        </a>
 
         <!-- Navigation -->
         <nav class="site-nav">
@@ -47,10 +53,50 @@
 
             <!-- Main Menu -->
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="employer-search.html">Employer Search</a></li>
-                <li><a href="hiring-ethics-articles.html">Hiring Ethics Articles</a></li>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="About.html">About</a></li>
+
+                <!-- Submenu -->
+                <li class="has-submenu">
+
+                    <!-- Parent label (no longer a link) -->
+                    <span class="submenu-label">Educational Items</span>
+
+                    <!-- Educational Items -->
+                    <button class="submenu-toggle" aria-label="Toggle submenu">
+                        <svg width="12" height="12" viewBox="0 0 12 12">
+                            <path d="M1.5 4L6 8l4.5-4"></path>
+                        </svg>
+                    </button>
+
+                    <!-- Dropdown submenu -->
+                    <ul class="submenu">
+                        <li><a href="Endangered Species.html">Endangered Species</a></li>
+                        <li><a href="Flags.html">Flags</a></li>
+                        <li><a href="Maps.html">Maps</a></li>
+                    </ul>
+
+                    <!-- Parent label (no longer a link) -->
+                    <span class="submenu-label">Self-Expressive Items</span>
+
+                    <!-- Self-Expressive Items -->
+                    <button class="submenu-toggle" aria-label="Toggle submenu">
+                        <svg width="12" height="12" viewBox="0 0 12 12">
+                            <path d="M1.5 4L6 8l4.5-4"></path>
+                        </svg>
+                    </button>
+
+                    <!-- Dropdown submenu -->
+                    <ul class="submenu">
+                        <li><a href="Adult Experience.html">Adult Experience</a></li>
+                        <li><a href="Inner Child.html">Inner Child</a></li>
+                    </ul>
+
+                </li>
+
+                <li><a href="Articles.html">Articles</a></li>
+
+            </ul>
 
         </nav>
 
@@ -65,21 +111,23 @@
     <div class="content">
 
         <!-- Page Heading --> 
-        <h2 class="about-heading">If We Care About Purpose For All, Co-Creation & Co-Existence is Probable</h2>
+        <h2 class="about-heading">Welcome Self-Expressive Peeps</h2>
 
-        <!-- Home Photo -->
+        <!-- Article Photo -->
         <figure class="home">
-            <img src="/IMAGES/home.png" alt="Home">
+            <img src="/images/home.png" alt="Home">
         </figure>
 
-        <!-- Home Text -->
-        <p>Selfary is Organized By:</p>
+        <!-- Article Text -->
+        <p>Free will is the purpose of our experiences. Our experiences, relationships, and environments influence and shape us, leading us to understand new aspects of our "selves".</p>
 
         <ol>
-            <li>About Page: Social link, donation link, contact email, and reasons why Selfary exists.</li>
-            <li>Employer Search categorized by region or contact, scale of employer, and type of employer. IN THE PROCESS OF CREATION THROUGHOUT 2026-2027. A large reason for this employer search is to lessen the likelihood of spam, ads, and scammers that people go through during their hiring endeavors - to be able to strive towards our purposeful goals worry free. While Selfary does not have control over what is happening behind closed doors with our businesses and governments, Selfary can provide information to be readily available for all of us to improve the online "system" we live in through creating caring and geninue experiences instead of disconnected and careless ones.</li>
-            <li>Hiring ethics articles based on belief and experience.</li>
+            <li>Educational Items: Includes any species that has been or currently is threatened / endangered / possibly extinct and is shown on fws.gov.</li>
+            <li>Self-Expressive Adult Items: For select Adult Experience items, you must be <a href="adult-legal-age.html">adult legal age</a> in your state to purchase.</li>
+            <li>Self-Expressive Inner Child Items: Hobbies are important for those peaceful times that we all need nowadays.</li>
         </ol>
+
+
 
     </div>
 </main>
@@ -90,11 +138,15 @@
 ============================ -->
 <footer class="site-footer">
     <div class="footer-inner">
+    <p>Questions?</p>
 
-        <p class="footer-copy">
-            © 2025 Selfary. All rights reserved.
-        </p>
+        <ol>
+            <li>Email: selfaryexpression@yahoo.com</li>
+            <li>Responses are sent within 1 business day.</li>
+            <li>Calls are only given on a case-by-case basis if the request calls for it. Pun intended.</li>
+        </ol>
 
+        <p class="footer-copy">© 2025-2026 Selfary Expression. All rights reserved.</p>
     </div>
 </footer>
 
@@ -102,30 +154,5 @@
 <!-- ===========================
      SCRIPTS
 ============================ -->
-<script>
-document.addEventListener("DOMContentLoaded", function () {
 
-    // Mobile menu toggle
-    const navToggle = document.querySelector(".nav-toggle");
-    const navMenu = document.querySelector(".nav-menu");
-
-    navToggle.addEventListener("click", () => {
-        navMenu.classList.toggle("open");
-    });
-
-    // Submenu toggles
-    const submenuToggles = document.querySelectorAll(".submenu-toggle");
-
-    submenuToggles.forEach(toggle => {
-        toggle.addEventListener("click", (e) => {
-            e.preventDefault();
-            const submenu = toggle.nextElementSibling;
-            submenu.classList.toggle("open");
-        });
-    });
-
-});
-</script>
-
-</body>
-</html>
+<script src="floating-cart.js"></script>
