--- a/Adult Experience.html
+++ b/Adult Experience.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Adult Items</title>
+    <title>Adult Experience Items</title>
 
     <!-- Your external stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
@@ -41,7 +41,9 @@
 
                 <li class="has-submenu">
                     <span class="submenu-label">Educational Items</span>
-                    <button class="submenu-toggle"><svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg></button>
+                    <button class="submenu-toggle">
+                        <svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg>
+                    </button>
                     <ul class="submenu">
                         <li><a href="Endangered Species.html">Endangered Species</a></li>
                         <li><a href="Flags.html">Flags</a></li>
@@ -49,7 +51,9 @@
                     </ul>
 
                     <span class="submenu-label">Self-Expressive Items</span>
-                    <button class="submenu-toggle"><svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg></button>
+                    <button class="submenu-toggle">
+                        <svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg>
+                    </button>
                     <ul class="submenu">
                         <li><a href="Adult Experience.html">Adult Experience</a></li>
                         <li><a href="Inner Child.html">Inner Child</a></li>
@@ -67,19 +71,13 @@
 <main id="main">
     <div class="content">
 
-        <h2 class="about-heading">Welcome Self-Expressive Peeps</h2>
+        <h2 class="about-heading">Adult Experience Items</h2>
 
         <figure class="home">
             <img src="/images/home.png" alt="Home">
         </figure>
 
-        <p>Free will is the purpose of our experiences...</p>
-
-        <ol>
-            <li>Educational Items...</li>
-            <li>Self-Expressive Adult Items...</li>
-            <li>Self-Expressive Inner Child Items...</li>
-        </ol>
+        <p>These items are designed to support self-expression, confidence, and personal empowerment for adults.</p>
 
         <!-- FILTERS -->
         <div class="filter-container">
@@ -116,7 +114,7 @@
             <li>Responses are sent within 1 business day.</li>
             <li>Calls are only given on a case-by-case basis.</li>
         </ol>
-        <p class="footer-copy">© 2025-2026 Selfary Expression. All rights reserved.</p>
+        <p class="footer-copy">© 2025 Selfary Expression. All rights reserved.</p>
     </div>
 </footer>
 
@@ -124,7 +122,7 @@
 <!-- PAGE-SPECIFIC PHOTO LIST -->
 <script>
 /* -----------------------------------------
-   Adult Items – Manual Photo List (OPTION D)
+   Adult Experience Items – Manual Photo List
 ----------------------------------------- */
 const photos = [
   {
@@ -143,7 +141,7 @@ const photos = [
     src: "/images/adult-items/pic3.webp",
     caption: "Playful Plush Toy",
     price: 19.99,
-    category: "inner-child"
+    category: "adult"
   }
 
   // Add more items here...
