--- a/Inner Child Items.html
+++ b/Inner Child Items.html
@@ -110,7 +110,7 @@
             <li>Responses are sent within 1 business day.</li>
             <li>Calls are only given on a case-by-case basis.</li>
         </ol>
-        <p class="footer-copy">© 2025-2026 Selfary Expression. All rights reserved.</p>
+        <p class="footer-copy">© 2025 Selfary Expression. All rights reserved.</p>
     </div>
 </footer>
 
