--- a/Articles.html
+++ b/Articles.html
@@ -21,20 +21,17 @@
 </head>
 <body>
 
-<!-- ===========================
-     SITE HEADER
-============================ -->
 <header class="site-header">
     <div class="site-header-inner">
 
-        <!-- Logo (clickable, links to home) -->
+        <!-- Logo -->
         <div class="site-title">
             <a href="index.html">
                 <img src="/images/logo.png" alt="Selfary Expression logo" class="site-logo">
             </a>
         </div>
 
-        <!-- Floating Cart Icon -->
+        <!-- Floating Cart -->
         <a href="cart.html" class="floating-cart">
             🛒
             <span class="cart-badge" id="cart-count">0</span>
@@ -42,67 +39,56 @@
 
         <!-- Navigation -->
         <nav class="site-nav">
-
-            <!-- Mobile Menu Toggle -->
             <button class="nav-toggle" aria-label="Open menu">
-                <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                <svg width="24" height="24" viewBox="0 0 24 24">
                     <path d="M4 7.5h16v1.5H4z"></path>
                     <path d="M4 15h16v1.5H4z"></path>
                 </svg>
             </button>
 
-            <!-- Main Menu -->
             <ul class="nav-menu">
+
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
 
-                <!-- Submenu -->
+                <!-- EDUCATIONAL ITEMS -->
                 <li class="has-submenu">
-
-                    <!-- Parent label (no longer a link) -->
                     <span class="submenu-label">Educational Items</span>
-
-                    <!-- Educational Items -->
                     <button class="submenu-toggle" aria-label="Toggle submenu">
-                        <svg width="12" height="12" viewBox="0 0 12 12">
+                        <svg width="12" height="12">
                             <path d="M1.5 4L6 8l4.5-4"></path>
                         </svg>
                     </button>
 
-                    <!-- Dropdown submenu -->
                     <ul class="submenu">
                         <li><a href="Endangered Species.html">Endangered Species</a></li>
                         <li><a href="Flags.html">Flags</a></li>
                         <li><a href="Maps.html">Maps</a></li>
                     </ul>
+                </li>
 
-                    <!-- Parent label (no longer a link) -->
+                <!-- SELF-EXPRESSIVE ITEMS -->
+                <li class="has-submenu">
                     <span class="submenu-label">Self-Expressive Items</span>
-
-                    <!-- Self-Expressive Items -->
                     <button class="submenu-toggle" aria-label="Toggle submenu">
-                        <svg width="12" height="12" viewBox="0 0 12 12">
+                        <svg width="12" height="12">
                             <path d="M1.5 4L6 8l4.5-4"></path>
                         </svg>
                     </button>
 
-                    <!-- Dropdown submenu -->
                     <ul class="submenu">
                         <li><a href="Adult Experience.html">Adult Experience</a></li>
                         <li><a href="Inner Child.html">Inner Child</a></li>
                     </ul>
-
                 </li>
 
                 <li><a href="Articles.html">Articles</a></li>
 
             </ul>
-
         </nav>
 
     </div>
 </header>
-
 
 <!-- ===========================
      MAIN CONTENT
