--- a/Flags.html
+++ b/Flags.html
@@ -12,21 +12,23 @@
 
 </head>
 <body>
-
 <header class="site-header">
     <div class="site-header-inner">
 
+        <!-- Logo -->
         <div class="site-title">
             <a href="index.html">
                 <img src="/images/logo.png" alt="Selfary Expression logo" class="site-logo">
             </a>
         </div>
 
+        <!-- Floating Cart -->
         <a href="cart.html" class="floating-cart">
             🛒
             <span class="cart-badge" id="cart-count">0</span>
         </a>
 
+        <!-- Navigation -->
         <nav class="site-nav">
             <button class="nav-toggle" aria-label="Open menu">
                 <svg width="24" height="24" viewBox="0 0 24 24">
@@ -36,24 +38,35 @@
             </button>
 
             <ul class="nav-menu">
+
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
 
+                <!-- EDUCATIONAL ITEMS -->
                 <li class="has-submenu">
                     <span class="submenu-label">Educational Items</span>
-                    <button class="submenu-toggle">
-                        <svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg>
+                    <button class="submenu-toggle" aria-label="Toggle submenu">
+                        <svg width="12" height="12">
+                            <path d="M1.5 4L6 8l4.5-4"></path>
+                        </svg>
                     </button>
+
                     <ul class="submenu">
                         <li><a href="Endangered Species.html">Endangered Species</a></li>
                         <li><a href="Flags.html">Flags</a></li>
                         <li><a href="Maps.html">Maps</a></li>
                     </ul>
+                </li>
 
+                <!-- SELF-EXPRESSIVE ITEMS -->
+                <li class="has-submenu">
                     <span class="submenu-label">Self-Expressive Items</span>
-                    <button class="submenu-toggle">
-                        <svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg>
+                    <button class="submenu-toggle" aria-label="Toggle submenu">
+                        <svg width="12" height="12">
+                            <path d="M1.5 4L6 8l4.5-4"></path>
+                        </svg>
                     </button>
+
                     <ul class="submenu">
                         <li><a href="Adult Experience.html">Adult Experience</a></li>
                         <li><a href="Inner Child.html">Inner Child</a></li>
@@ -61,12 +74,12 @@
                 </li>
 
                 <li><a href="Articles.html">Articles</a></li>
+
             </ul>
         </nav>
 
     </div>
 </header>
-
 
 <main id="main">
     <div class="content">
