--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
     <div class="footer-inner">
         <p>Questions?</p>
         <ol>
-            <li>Email: selfaryexpression@yahoo.com</li>
+            <li>Email: selfaryexpression@hotmail.com</li>
             <li>Responses are sent within 1 business day.</li>
             <li>Calls are only given on a case-by-case basis.</li>
         </ol>
