--- a/Inner Child.html
+++ b/Inner Child.html
@@ -107,17 +107,16 @@
 ============================ -->
 <footer class="site-footer">
     <div class="footer-inner">
-    <p>Questions?</p>
+        <p>Questions?</p>
 
-        <ol>
-            <li>Email: selfaryexpression@hotmail.com</li>
-            <li>Responses are sent within 1 business day.</li>
-            <li>Calls are only given on a case-by-case basis if the request calls for it. Pun intended.</li>
-        </ol>
+        <p>Email: selfaryexpression@hotmail.com</p>
+        <p>Responses are sent within 1 business day.</p>
+        <p>Calls are only given on a case-by-case basis if the request calls for it. Pun intended.</p>
 
         <p class="footer-copy">© 2025-2026 Selfary Expression. All rights reserved.</p>
     </div>
 </footer>
+
 
 
 <!-- PAGE-SPECIFIC PHOTO LIST -->
