--- a/Inner Child.html
+++ b/Inner Child.html
@@ -39,17 +39,29 @@
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
 
+                <!-- Submenu 1 -->
                 <li class="has-submenu">
                     <span class="submenu-label">Educational Items</span>
-                    <button class="submenu-toggle"><svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg></button>
+                    <button class="submenu-toggle">
+                        <svg width="12" height="12">
+                            <path d="M1.5 4L6 8l4.5-4"></path>
+                        </svg>
+                    </button>
                     <ul class="submenu">
                         <li><a href="Endangered Species.html">Endangered Species</a></li>
                         <li><a href="Flags.html">Flags</a></li>
                         <li><a href="Maps.html">Maps</a></li>
                     </ul>
+                </li>
 
+                <!-- Submenu 2 -->
+                <li class="has-submenu">
                     <span class="submenu-label">Self-Expressive Items</span>
-                    <button class="submenu-toggle"><svg width="12" height="12"><path d="M1.5 4L6 8l4.5-4"></path></svg></button>
+                    <button class="submenu-toggle">
+                        <svg width="12" height="12">
+                            <path d="M1.5 4L6 8l4.5-4"></path>
+                        </svg>
+                    </button>
                     <ul class="submenu">
                         <li><a href="Adult Experience.html">Adult Experience</a></li>
                         <li><a href="Inner Child.html">Inner Child</a></li>
