--- a/Cart.html
+++ b/Cart.html
@@ -118,6 +118,8 @@
 
   <!-- Floating Cart Count Script -->
   <script src="floating-cart.js"></script>
+  <script src="main.js"></script>
+
 
 </body>
 </html>
