--- a/Adult Experience.html
+++ b/Adult Experience.html
@@ -24,7 +24,7 @@
         </div>
 
         <!-- Floating Cart -->
-        <a href="cart.html" class="floating-cart">
+        <a href="Cart.html" class="floating-cart">
             🛒
             <span class="cart-badge" id="cart-count">0</span>
         </a>
