--- a/Inner Child.html
+++ b/Inner Child.html
@@ -22,7 +22,7 @@
             </a>
         </div>
 
-        <a href="cart.html" class="floating-cart">
+        <a href="Cart.html" class="floating-cart">
             🛒
             <span class="cart-badge" id="cart-count">0</span>
         </a>
