--- a/about.html
+++ b/about.html
@@ -35,6 +35,10 @@
         </div>
 
         <!-- Floating Cart -->
+        <a href="Cart.html" class="floating-cart">
+            🛒
+            <span class="cart-badge" id="cart-count">0</span>
+        </a>
 
         <!-- Navigation -->
         <nav class="site-nav">
@@ -158,5 +162,4 @@
      SCRIPTS
 ============================ -->
 
-<script src="floating-cart.js"></script>
 <script src="main.js"></script>
