--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <!-- ===========================
          PAGE TITLE
     ============================ -->
-    <title>Home</title>
+    <title>About</title>
 
     <!-- ===========================
          STYLESHEETS
@@ -100,7 +100,7 @@
     <div class="content">
 
         <!-- Page Heading --> 
-        <h2 class="about-heading">Welcome Self-Expressive Peeps</h2>
+        <h2 class="about-heading">I'm Tempest</h2>
 
         <!-- Article Photo -->
         <figure class="home">
@@ -108,7 +108,6 @@
         </figure>
 
         <!-- Article Text -->
-        <p>I'm Tempest. :)</p>
 
         <p>I created Selfary Expression as a way for adults to explore their self-expression. Everything on the website was thought out in a certain way to consider both the child aspects of ourselves along with the adult. I understand that there are those who may look at the website and wonder, what is this business about?</p>
 
