--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
             </button>
 
             <ul class="nav-menu">
-
                 <li><a href="Index.html">Home</a></li>
-                <li><a href="About.html">About</a></li>
+                <li><a href="About.html">About</a></li>      
+                <li><a href="Articles.html">Articles</a></li>
 
                 <!-- EDUCATIONAL ITEMS -->
                 <li class="has-submenu">
@@ -85,7 +85,14 @@
                     </ul>
                 </li>
 
-                <li><a href="Articles.html">Articles</a></li>
+                
+                <!-- Mobile Menu Toggle -->
+                <button class="nav-toggle" aria-label="Open menu">
+                    <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                        <path d="M4 7.5h16v1.5H4z"></path>
+                        <path d="M4 15h16v1.5H4z"></path>
+                    </svg>
+                </button>
 
             </ul>
         </nav>
